--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-  <body>
+  <head>
     <title>我的第一个网站</title>
+  </head>
+  <body>
        Hello there, awesome person!
   </body>
 </html>
