--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>我的第一个网站</title>
   </head>
   <body>
-       Hello there, awesome person!
+    <h1>Hello there, awesome person!</h1>
   </body>
 </html>
