--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
        Hello there, awesome person!
+    <img src=https://avatars.githubusercontent.com/u/68230979?v=4>
   </body>
 </html>
