--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
   <body>
        Hello there, awesome person!
     <img src=''https://avatars.githubusercontent.com/u/68230979?v=4'';>
+    <ol>
+      <li>This</li>
+      <li>Is an</li>
+      <li>Ordered list</li>
+    </ol>
+    <ul>
+    <li>This</li>
+      <li>Is an</li>
+      <li>Unordered list</li>
+    </ul>
   </body>
 </html>
