--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>我的第一个网站</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
        Hello there, awesome person!
