--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>我的第一个网站</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
        Hello there, awesome person!
-    <img src=''https://avatars.githubusercontent.com/u/68230979?v=4'';>
+    <img src='' https://avatars.githubusercontent.com/u/68230979?v=4'';>
     <ol>
       <li>This</li>
       <li>Is an</li>
